tests/tokenize/error/tokenize.err
Error: Unexpected char in input
   ╭─[tests/tokenize/error/tokenize.scm:1:1]
   │
 1 │ ```
   · ┬  
   · ╰── Unexpected char `
───╯
